--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -11,20 +11,16 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="images/logo.png" alt="ServeUp Logo">
+        <img src="images/logo.png" alt="ServeUp Logo" />
         <span>ServeUp</span>
       </div>
-      <div class="nav-container">
-        <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html" class="active">Contact</a></li>
-        </ul>
-        <div class="auth-buttons">
-          <a href="login.html" class="login-btn">Login</a>
-          <a href="signup.html" class="signup-btn">Signup</a>
-        </div>
-      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="login.html" class="btn-login">Login</a></li>
+        <li><a href="signup.html" class="btn-signup">Signup</a></li>
+      </ul>
     </nav>
   </header>
 
@@ -34,8 +30,8 @@
         <h2>Contact Information</h2>
         <ul>
           <li><strong>Email:</strong> support@serveup.org</li>
-          <li><strong>Phone:</strong> +91 9876543210</li>
-          <li><strong>Address:</strong> 123 Volunteer Lane, New Delhi, India</li>
+          <li><strong>Phone:</strong> +91 8788233715</li>
+          <li><strong>Address:</strong> Lane.no.4,BhagyaNagar, Nanded, Maharashtra, India</li>
           <li><strong>Hours:</strong> Mon - Fri, 9AM - 6PM</li>
         </ul>
       </div>
@@ -53,8 +49,8 @@
   </main>
 
   <footer class="footer">
-    &copy; 2025 ServeUp. All rights reserved.
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
   </footer>
-
+  
 </body>
 </html>
