--- a/src/main/resources/static/events.html
+++ b/src/main/resources/static/events.html
@@ -14,7 +14,7 @@
     </div>
     <div class="nav-right">
       <a href="volunteer.html">Dashboard</a>
-      <a href="events.html">Events</a>
+      <a href="events.html" class="active">Events</a>
       <a href="attendance.html">Attendance</a>
       <a href="assignments.html">Assignments</a>
       <a href="announcements.html">Announcements</a>
@@ -26,7 +26,6 @@
     <div class="hero-content">
       <h1>Welcome to ServeUp</h1>
       <p>Your journey to making a difference starts here. Explore events and take the lead in transforming lives through service.</p>
-      <a href="volunteer.html" class="hero-btn">Go to Dashboard</a>
     </div>
   </section>
   
@@ -54,13 +53,11 @@
       <button onclick="location.href='environment-events.html'">View Events</button>
     </div>
   </section>
-
+  
   <footer class="footer">
-    <div class="footer-content">
-      <p>&copy; 2025 ServeUp. All rights reserved.</p>
-      <p><a href="contact.html">Contact Us</a> | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
-    </div>
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
   </footer>
+  
   
 </body>
 </html>
