--- a/src/main/resources/static/volunteer.html
+++ b/src/main/resources/static/volunteer.html
@@ -20,7 +20,7 @@
       <a href="attendance.html">Attendance</a>
       <a href="assignments.html">Assignments</a>
       <a href="announcements.html">Announcements</a>
-      <a href="contact.html">Contact</a>
+     
       <button class="logout-btn" onclick="window.location.href='index.html'">Logout</button>
     </div>
   </nav>
@@ -74,7 +74,11 @@
     </div>
   </div>
 
-  <footer>&copy; 2025 Volunteer Org</footer>
+  <footer class="footer">
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
+  </footer>
+  
+  
   <script src="js/volunteer.js"></script>
 </body>
 </html>
