--- a/src/main/resources/static/about.html
+++ b/src/main/resources/static/about.html
@@ -19,8 +19,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
         <li><a href="contact.html">Contact</a></li>
-        <li><a href="login.html" class="login-btn">Login</a></li>
-        <li><a href="signup.html" class="signup-btn">Signup</a></li>
+        <li><a href="login.html" class="btn-login">Login</a></li>
+        <li><a href="signup.html" class="btn-signup">Signup</a></li>
       </ul>
     </nav>
   </header>
@@ -64,17 +64,10 @@
     <h2>Meet Our Team</h2>
     <div class="team-container">
       <div class="team-member">
-        <img src="images/team1.jpg" alt="Riya Sharma">
-        <p>Riya Sharma<br><small>Founder & CEO</small></p>
+        <img src="images/team1.jpg" alt="Manasvi">
+        <p>Manasvi Mortale<br><small>Founder</small></p>
       </div>
-      <div class="team-member">
-        <img src="images/team2.jpg" alt="Ajay Mehra">
-        <p>Ajay Mehra<br><small>Operations Head</small></p>
-      </div>
-      <div class="team-member">
-        <img src="images/team3.jpg" alt="Sneha Patel">
-        <p>Sneha Patel<br><small>Community Manager</small></p>
-      </div>
+    
     </div>
   </section>
 
@@ -84,10 +77,10 @@
     <p>We’re building a dynamic system for volunteers to track their impact, earn badges, and connect with causes they care about. Stay tuned!</p>
   </section>
 
-  <!-- Footer -->
   <footer class="footer">
-    &copy; 2025 ServeUp. All rights reserved.
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
   </footer>
+  
 
 </body>
 </html>
