--- a/src/main/resources/static/admin-dashboard.html
+++ b/src/main/resources/static/admin-dashboard.html
@@ -13,13 +13,14 @@
       <img src="images/logo.png" alt="ServeUp Logo" class="logo" />
       <span>ServeUp Admin</span>
     </div>
-    <div class="nav-links">
-      <a href="admin-dashboard.html">Dashboard</a>
-      <a href="admin-volunteers.html">Volunteers</a>
-      <a href="admin-events.html">Events</a>
-      <a href="admin-reports.html">Reports</a>
-      <button onclick="window.location.href='index.html'" class="logout-btn">Logout</button>
-    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="admin-volunteers.html">Volunteers</a></li>
+      <li><a href="admin-events.html">Events</a></li>
+      <li><a href="admin-reports.html">Reports</a></li>
+      <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
+    </ul>
+    
   </nav>
 
   <section class="hero">
