--- a/src/main/resources/static/announcements.html
+++ b/src/main/resources/static/announcements.html
@@ -3,37 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Announcements | ServeUp</title>
-  <link rel="stylesheet" href="css/sections.css" />
+  <title>Volunteer Announcements</title>
+  <link rel="stylesheet" href="css/announcements.css" />
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">
-      <img src="images/logo.png" alt="ServeUp Logo" />
-      ServeUp
+  <header class="navbar">
+    <div class="navbar-left">
+      <img src="images/logo.png" alt="ServeUp Logo" class="logo-img" />
+      <span class="web-name">ServeUp</span>
     </div>
-    <div class="nav-right">
-      <ul class="nav-links">
-        <li><a href="volunteer.html">Dashboard</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="attendance.html">Attendance</a></li>
-        <li><a href="assignments.html">Assignments</a></li>
-        <li><a href="announcements.html" class="active">Announcements</a></li>
-      </ul>
-      <button class="logout-btn" onclick="location.href='index.html'">Logout</button>
-    </div>
-  </nav>
+    <nav class="navbar-right">
+      <a href="volunteer.html">Dashboard</a>
+      <a href="events.html">Events</a>
+      <a href="attendance.html">Attendance</a>
+      <a href="assignments.html">Assignments</a>
+      <a href="announcements.html" class="active">Announcements</a>
+      <a href="index.html" class="logout-btn">Logout</a>
+    </nav>
+  </header>
 
-  <section class="content-section">
-    <h2>Latest Announcements</h2>
-    <div class="announcement">
-      <h4>New Health Initiative on April 20</h4>
-      <p>Please report to the City Clinic Grounds by 9:30 AM.</p>
-    </div>
-    <div class="announcement">
-      <h4>Environmental Clean-Up Postponed</h4>
-      <p>The event scheduled for April 15 has been moved to April 22 due to weather.</p>
-    </div>
-  </section>
+  <main class="content">
+    <section class="page-section">
+      <h1>Announcements</h1>
+      <div class="announcement-list">
+        <div class="announcement-card">
+          <h3>New Event Added: Beach Cleanup Drive</h3>
+          <p>Join us for a beach cleanup on April 22, 2025 to celebrate Earth Day.</p>
+          <p><strong>Posted On:</strong> April 18, 2025</p>
+        </div>
+        <div class="announcement-card">
+          <h3>Volunteer of the Month - March</h3>
+          <p>Congratulations to Jane Doe for outstanding dedication and contributions!</p>
+          <p><strong>Posted On:</strong> April 1, 2025</p>
+        </div>
+        <!-- More announcements can go here -->
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
+  </footer>
 </body>
 </html>
