--- a/src/main/resources/static/assignments.html
+++ b/src/main/resources/static/assignments.html
@@ -3,48 +3,46 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Assignments | ServeUp</title>
-  <link rel="stylesheet" href="css/sections.css" />
+  <title>Volunteer Assignments</title>
+  <link rel="stylesheet" href="css/assignments.css" />
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">
-      <img src="images/logo.png" alt="ServeUp Logo" />
-      ServeUp
+  <header class="navbar">
+    <div class="navbar-left">
+      <img src="images/logo.png" alt="ServeUp Logo" class="logo-img" />
+      <span class="web-name">ServeUp</span>
     </div>
-    <div class="nav-right">
-      <ul class="nav-links">
-        <li><a href="volunteer.html">Dashboard</a></li>
-        <li><a href="events.html">Events</a></li>
-        <li><a href="attendance.html">Attendance</a></li>
-        <li><a href="assignments.html" class="active">Assignments</a></li>
-        <li><a href="announcements.html">Announcements</a></li>
-      </ul>
-      <button class="logout-btn" onclick="location.href='index.html'">Logout</button>
-    </div>
-  </nav>
+    <nav class="navbar-right">
+      <a href="volunteer.html">Dashboard</a>
+      <a href="events.html">Events</a>
+      <a href="attendance.html">Attendance</a>
+      <a href="assignments.html" class="active">Assignments</a>
+      <a href="announcements.html">Announcements</a>
+      <a href="index.html" class="logout-btn">Logout</a>
+    </nav>
+  </header>
 
-  <section class="content-section">
-    <h2>My Assignments</h2>
-
-    <div class="assignment-list">
-      <div class="assignment-card">
-        <h3>Health Camp Coordination</h3>
-        <p><strong>Due:</strong> April 18, 2025</p>
-        <p><strong>Task:</strong> Coordinate volunteers for registration and check-ups.</p>
+  <main class="content">
+    <section class="page-section">
+      <h1>Assignments</h1>
+      <div class="assignment-list">
+        <div class="assignment-card">
+          <h3>Community Survey Report</h3>
+          <p>Prepare and submit a report on the recent community health survey conducted during the Health Camp.</p>
+          <p><strong>Due Date:</strong> April 25, 2025</p>
+        </div>
+        <div class="assignment-card">
+          <h3>Environmental Awareness Poster</h3>
+          <p>Design a poster highlighting the importance of reducing plastic usage.</p>
+          <p><strong>Due Date:</strong> April 28, 2025</p>
+        </div>
+        <!-- More assignments can go here -->
       </div>
+    </section>
+  </main>
 
-      <div class="assignment-card">
-        <h3>Blood Drive Reporting</h3>
-        <p><strong>Due:</strong> April 22, 2025</p>
-        <p><strong>Task:</strong> Prepare attendance and donor data report.</p>
-        <form class="upload-form" action="/upload" method="POST" enctype="multipart/form-data">
-          <label for="file-upload">Upload Report:</label>
-          <input type="file" name="assignmentFile" id="file-upload" required>
-          <button type="submit">Submit</button>
-        </form>
-      </div>
-    </div>
-  </section>
+  <footer class="footer">
+    <p>&copy; 2025 ServeUp. All rights reserved.</p>
+  </footer>
 </body>
 </html>
