Added admin assignments and announcements pages

--- a/src/main/resources/static/admin-reports.html
+++ b/src/main/resources/static/admin-reports.html
@@ -16,8 +16,10 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="admin-dashboard.html">Dashboard</a></li>
-      <li><a href="admin-volunteers.html">Volunteers</a></li>
+      <li><a href="admin-volunteers.html" >Volunteers</a></li>
       <li><a href="admin-events.html">Events</a></li>
+      <li><a href="admin-assignments.html">Assignments</a></li>
+      <li><a href="admin-announcements.html">Announcements</a></li>
       <li><a href="admin-reports.html" class="active">Reports</a></li>
       <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
     </ul>
