--- a/src/main/resources/static/admin-events.html
+++ b/src/main/resources/static/admin-events.html
@@ -18,10 +18,11 @@
       <li><a href="admin-dashboard.html">Dashboard</a></li>
       <li><a href="admin-volunteers.html">Volunteers</a></li>
       <li><a href="admin-events.html" class="active">Events</a></li>
+      <li><a href="admin-assignments.html">Assignments</a></li>
+      <li><a href="admin-announcements.html">Announcements</a></li>
       <li><a href="admin-reports.html">Reports</a></li>
       <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
     </ul>
-    
   </nav>
 
   <!-- Hero Section -->
