--- a/src/main/resources/static/admin-volunteers.html
+++ b/src/main/resources/static/admin-volunteers.html
@@ -18,6 +18,8 @@
       <li><a href="admin-dashboard.html">Dashboard</a></li>
       <li><a href="admin-volunteers.html" class="active">Volunteers</a></li>
       <li><a href="admin-events.html">Events</a></li>
+      <li><a href="admin-assignments.html">Assignments</a></li>
+      <li><a href="admin-announcements.html">Announcements</a></li>
       <li><a href="admin-reports.html">Reports</a></li>
       <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
     </ul>
