Made changes in frontend

--- a/src/main/resources/static/admin-assignments.html
+++ b/src/main/resources/static/admin-assignments.html
@@ -1,62 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin - Manage Assignments</title>
-  <link rel="stylesheet" href="css/admin-assignments.css">
+  <link rel="stylesheet" href="css/admin-assignments.css" />
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">
-      <img src="images/logo.png" alt="Logo">
-      <span>ServeUp</span>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="admin-dashboard.html">Dashboard</a></li>
-      <li><a href="admin-volunteers.html">Volunteers</a></li>
-      <li><a href="admin-events.html">Events</a></li>
-      <li><a href="admin-assignments.html" class="active">Assignments</a></li>
-      <li><a href="admin-announcements.html">Announcements</a></li>
-      <li><a href="admin-reports.html">Reports</a></li>
-      <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
-    </ul>
-  </nav>
+  <div class="wrapper">
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-text">
+    <header class="navbar">
+      <div class="logo">
+        <img src="images/logo.png" alt="ServeUp Logo" />
+        ServeUp
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="admin-dashboard.html">Dashboard</a></li>
+        <li><a href="admin-volunteers.html">Volunteers</a></li>
+        <li><a href="admin-events.html">Events</a></li>
+        <li><a href="admin-assignments.html" class="active">Assignments</a></li>
+        <li><a href="admin-announcements.html">Announcements</a></li>
+        <li><a href="admin-reports.html">Reports</a></li>
+        <li><button class="logout" onclick="window.location.href='index.html'">Logout</button></li>
+      </ul>
+    </header>
+
+    <section class="hero">
       <h1>Manage Assignments</h1>
-      <p>Create and track volunteer assignments</p>
-    </div>
-  </section>
+      <p>Track and update assignments assigned to volunteers</p>
+    </section>
 
-  <!-- Main Content -->
-  <div class="main-content">
+    <main class="main-content">
+      <div class="table-controls">
+        <button class="add-btn" onclick="openModal()">+ Add Assignment</button>
+      </div>
 
-    <!-- Assignment Form -->
-    <div class="assignment-controls">
-      <form id="assignmentForm">
-        <input type="text" id="title" placeholder="Assignment Title" required>
-        <textarea id="description" placeholder="Assignment Description" required></textarea>
-        <input type="date" id="dueDate" required>
-        <button type="submit" class="add-assignment-btn">Add Assignment</button>
-      </form>
-    </div>
+      <table class="styled-table">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Due Date</th>
+            <th>Status</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Assignment rows will be dynamically added here -->
+        </tbody>
+      </table>
 
-    <!-- Assignment List -->
-    <div class="assignment-list" id="assignmentList">
-      <!-- Dynamic content will be inserted here -->
-    </div>
+      <!-- Add Assignment Modal -->
+      <div id="addAssignmentModal" class="modal">
+        <div class="modal-content">
+          <span class="close" onclick="closeModal()">&times;</span>
+          <h2>Add New Assignment</h2>
+          <form id="assignmentForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required>
+
+            <label for="description">Description:</label>
+            <textarea id="description" name="description" required></textarea>
+
+            <label for="dueDate">Due Date:</label>
+            <input type="date" id="dueDate" name="dueDate" required>
+
+            <button type="submit">Save Assignment</button>
+          </form>
+        </div>
+      </div>
+
+    </main>
   </div>
 
-  <!-- Footer -->
   <footer class="footer">
-    <p>&copy; 2025 ServeUp. All rights reserved.</p>
+    &copy; 2025 ServeUp. All Rights Reserved.
   </footer>
 
-  <script src="js/admin-assignments.js"></script>
+  <script>
+    function openModal() {
+      document.getElementById('addAssignmentModal').style.display = 'block';
+    }
+
+    function closeModal() {
+      document.getElementById('addAssignmentModal').style.display = 'none';
+    }
+
+    window.onclick = function(event) {
+      const modal = document.getElementById('addAssignmentModal');
+      if (event.target === modal) {
+        closeModal();
+      }
+    };
+
+    // Placeholder for form handling
+    document.getElementById('assignmentForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      // Logic to add assignment can go here
+      alert('Assignment saved!');
+      closeModal();
+    });
+  </script>
+
 </body>
 </html>
