--- a/src/main/resources/static/education-events.html
+++ b/src/main/resources/static/education-events.html
@@ -9,8 +9,6 @@
 <body>
 
   <!-- Navbar -->
- <!-- Navbar -->
-  <!-- Navbar -->
   <nav class="navbar">
     <div class="navbar-left">
       <img src="images/logo.png" alt="ServeUp Logo" class="logo">
@@ -25,7 +23,7 @@
       <button class="logout-btn" onclick="window.location.href='index.html'">Logout</button>
     </div>
   </nav>
-
+  
   <!-- Hero Banner -->
   <section class="hero-banner education-hero">
     <h1>Education Drives</h1>
@@ -35,43 +33,54 @@
   <!-- Events Section -->
   <section class="events-section">
     <h2 class="section-title">Upcoming Education Events</h2>
-
-  <div class="events-scroll-wrapper">
-    <div class="event-card">
-      <h3>Book Donation Drive</h3>
-      <p><strong>Date:</strong> May 12, 2025</p>
-      <p><strong>Time:</strong> 10:00 AM - 1:00 PM</p>
-      <p><strong>Venue:</strong> Community Library</p>
-      <p><strong>Organization:</strong> LearnMore Foundation</p>
-      <p><strong>Contact:</strong> learnmore@edu.org</p>
-      <a href="registration.html" class="register-btn">Register</a>
+    <div class="events-scroll-wrapper" id="education-events-container">
+      <!-- Event cards will be dynamically inserted here -->
     </div>
-
-    <div class="event-card">
-      <h3>Weekend Tutoring Sessions</h3>
-      <p><strong>Date:</strong> Every Saturday (May–June)</p>
-      <p><strong>Time:</strong> 2:00 PM - 5:00 PM</p>
-      <p><strong>Venue:</strong> Local Youth Center</p>
-      <p><strong>Organization:</strong> BrightFuture Volunteers</p>
-      <p><strong>Contact:</strong> tutor@brightfuture.org</p>
-      <a href="registration.html" class="register-btn">Register</a>
-    </div>
-  </div>
   </section>
 
   <!-- Testimonials -->
   <section class="testimonials">
     <h2>What Volunteers Say</h2>
-    <p class="testimonial">"It was incredibly fulfilling to help students learn and grow."</p>
+    <div class="testimonial">
+      <p>"It was incredibly fulfilling to help students learn and grow."</p>
+    </div>
   </section>
-
-  
 
   <!-- Footer -->
   <footer class="footer">
     <p>&copy; 2025 ServeUp. All rights reserved.</p>
   </footer>
-  
+
+  <script>
+    function loadEducationEvents() {
+      const events = JSON.parse(localStorage.getItem("serveupEvents")) || [];
+      const container = document.getElementById("education-events-container");
+      container.innerHTML = "";
+
+      const educationEvents = events.filter(event => event.category === "Education");
+
+      if (educationEvents.length === 0) {
+        container.innerHTML = "<p>No upcoming education events at the moment.</p>";
+        return;
+      }
+
+      educationEvents.forEach(event => {
+        const card = document.createElement("div");
+        card.className = "event-card";
+        card.innerHTML = `
+          <h3>${event.name}</h3>
+          <p><strong>Date:</strong> ${event.date}</p>
+          <p><strong>Time:</strong> ${event.time}</p>
+          <p><strong>Venue:</strong> ${event.venue}</p>
+          <p><strong>Contact:</strong> contact@serveup.org</p>
+          <a href="registration.html" class="register-btn">Register</a>
+        `;
+        container.appendChild(card);
+      });
+    }
+
+    document.addEventListener("DOMContentLoaded", loadEducationEvents);
+  </script>
 
 </body>
 </html>
